--- a/src/main/resources/templates/profile-edit.html
+++ b/src/main/resources/templates/profile-edit.html
@@ -62,13 +62,22 @@
                        id="imageInput"
                        name="profileImage"
                        accept="image/*">
-                <small class="hint">Crop before saving</small>
+                <small class="hint"></small>
             </div>
 
             <div class="form-actions">
                 <button type="submit" class="btn btn-primary">Save</button>
                 <a href="/profile" class="btn">Cancel</a>
             </div>
+
+            <div class="divider"></div>
+
+            <div class="form-actions">
+                <a href="/change-password" class="btn btn-secondary">
+                    Change Password
+                </a>
+            </div>
+
         </form>
 
     </div>
