--- a/src/main/resources/static/css/headerstyle.css
+++ b/src/main/resources/static/css/headerstyle.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+    font-family: "Segoe UI", Arial, sans-serif;
+}
 .header {
     width: 100%;
     height: 64px;
@@ -11,6 +15,8 @@
 
     border-bottom: 2px solid #165fa3;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.18);
+    margin: 0;           /* 👈 important */
+    line-height: 1;
 }
 
 /* App title */
